# moirai

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  cmake_uninstall.cmake.in  moirai.pc.in  moirai_emscripten.cmake
.github/workflows/: ci.yml  release.yml
conda.recipe/: bld.bat  build.sh  meta.yaml
debian/: .gitignore  README.Debian  README.source  changelog  clean  control  copyright  libmoirai-dev.dirs  libmoirai-dev.install  libmoirai.dirs  libmoirai.install  libmoirai.lintian-overrides  libmoirai.substvars  missing-sources  moirai-dev.install  not-installed  rules  source.lintian-overrides
doc/: Walkthrough.md  debian-packaging.md  github-debian-release-guide.md
include/catch/: README.md  catch_macros.hpp
include/moirai/: error_reporting.h  extern_c_api_as_opaque.h  extern_c_api_as_transparent.h  opaque_pointers.hpp  reference_handle.h  reference_handle.hpp  reference_handle_map_export.h  reference_handle_test_helper.hpp  reference_type_converters.hpp  setup_modifiers.h
src/: moirai.vcxproj  moirai.vcxproj.filters  reference_handle.cpp  reference_handle_map_export.cpp
tests/: moirai.props.in  moirai_test.sln  readme.md
tests/CSharpTestBindings/: CSharpTestBindings.csproj  LowLevelInterop.cs
tests/CSharpTestBindings/Properties/: AssemblyInfo.cs
tests/crashtest/: crashtest.py  crashtest.pyproj
tests/moirai_test/: main.cpp  moirai_test.vcxproj  moirai_test.vcxproj.filters
tests/moirai_test_api/: main.cpp  moirai_test_api.vcxproj  moirai_test_api.vcxproj.filters
tests/moirai_test_lib/: c_interop_api.cpp  c_interop_api.h  moirai_test_lib.vcxproj  moirai_test_lib.vcxproj.filters  setup_modifiers.h  species.cpp  species.h
tests/moirai_test_lib_a/: c_interop_api.cpp  domain_a.cpp  moirai_test_lib_a.vcxproj  moirai_test_lib_a.vcxproj.filters
tests/moirai_test_lib_a/include/moirai_test_lib_a/: c_interop_api.h  domain_a.h  setup_modifiers.h
tests/moirai_test_lib_b/: c_interop_api.cpp  domain_b.cpp  moirai_test_lib_b.vcxproj  moirai_test_lib_b.vcxproj.filters
tests/moirai_test_lib_b/include/moirai_test_lib_b/: c_interop_api.h  domain_b.h  setup_modifiers.h
tests/python_test_bindings/: README.md  ffi_issue.py  requirements.txt  run_tests.py  setup.py
tests/python_test_bindings/codegen/: gen_py_cffi_testmoirai.fsx
tests/python_test_bindings/testmoirai/: classes.py  generated.py
tests/python_test_bindings/testmoirai/data/: funcs_cdef.h
tests/python_test_bindings/testmoirai/wrap/: ffi_interop.py  ffi_interop_stub.py  testmoirai_wrap_generated.py
tests/python_test_bindings/tests/: test_api.py  testapi.py
